--- a/merncrud/frontend/index.html
+++ b/merncrud/frontend/index.html
@@ -8,6 +8,16 @@
 <body>
     <blockquote>
         <h1>User Crud</h1>
+        <form>
+           
+            Name: <input type="text" id="name" required><br>
+            Email: <input type="email" id="email" required><br>
+            Phone: <input type="text" id="phone" required><br><br>
+
+            <button id="addRecord"> Add Record </button><br><br>
+
+        </form>
+
         <table width="100" border="1">
             <thead>
                 <tr>
